# ann-generator

./: CMakeLists.txt  codegenerator.cpp  codegenerator.h  compiler.cpp  compiler.h  component.h  cxxcodegenerator.cpp  cxxcodegenerator.h  ir.cpp  ir.h  layer.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  modelview.cpp  modelview.h  nngen_en_US.ts  node.cpp  node.h
QCodeEditor/: CMakeLists.txt
QCodeEditor/src/internal/: QCodeEditor.cpp  QLanguage.cpp  QSyntaxStyle.cpp
